# processes

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.txt  Makefile  README.md  pyproject.toml
processes/: __init__.py  distributions.py  processes.py  utils.py
tests/: conftest.py  test_bessel_process.py  test_brownian_bridge.py  test_brownian_motion.py  test_compound_poisson_process.py  test_cox_ingersoll_ross_process.py  test_fractional_brownian_motion.py  test_gamma_process.py  test_geometric_brownian_motion.py  test_invalid_common_sample_parameters.py  test_inverse_bessel_process.py  test_multidimensional_brownian_motion.py  test_multidimensional_ito_process.py  test_normal_inverse_gaussian_process.py  test_ornstein_uhlenbeck_process.py  test_poisson_process.py  test_squarred_bessel_process.py  test_stochastic_process.py  test_time_changed_brownian_motion.py  test_wishart_process.py
