[tool.poetry]
name = "processes"
version = "0.1.0"
description = "Generation of sample paths of stochastic processes"
authors = ["Martin Stefanik <stefanik.mar@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/martinstefanik/processes"
repository = "https://github.com/martinstefanik/processes"
keywords = [
    "Monte Carlo",
    "sampling",
    "stochastic differential equations",
    "stochastic processes",
]
include = [
    { path="LICENSE.txt", format="sdist" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.17"

[tool.poetry.dev-dependencies]
matplotlib = "^3.1"
pytest = "^6.2"
pytest-cov = "^3.0"
pre-commit = "^2.16"
pytest-xdist = "^2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
safe = true

[tool.isort]
profile = "black"
line_length = 80

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError"
]

[tool.coverage.run]
omit = ["tests/*"]
